force-app/main/default/objects/Product_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of a Product</description>
        <label>Line Item Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Line Item</label>
        <referenceTo>Line_Item__c</referenceTo>
        <relationshipLabel>Product Line Items</relationshipLabel>
        <relationshipName>Product_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of a product</description>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Product Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LIN-{00000}</displayFormat>
        <label>Product Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>